[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clustervis"
version = "1.1.0"
description = "A Python package for clustering visualization"
readme = "README.md"
authors = [{ name = "Antonio De Angelis", email = "deangelis.antonio122@gmail.com" }]
license = { text = "MIT" }
dependencies = ["numpy", "matplotlib", "pandas", "dash", "plotly", "sklearn"]
requires-python = ">=3.6"